# r0-metal-doctor

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FINDINGS.md  PROGRESS.md  README.md  SECURITY.md  deny.toml  dist-workspace.toml  release.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
evidence/: README.md  final-test-cpu-debug.json  final-test-hybrid-debug.json  final-test-hybrid-stdout.txt  hybrid-stdout.txt  prove-hello-debug.json  prove-hello-info.json  prove-hello-metal-feature-debug.json  prove-hybrid-metal-debug.json  v0.2-hybrid-cpu-killswitch.json  v0.2-hybrid-metal-observed.json
src/: bundle.rs  check.rs  device.rs  envprobe.rs  lane.rs  main.rs  midnight.rs  prove.rs  report.rs  sanitize.rs  target.rs  versions.rs
tests/: cli.rs
