[workspace]

[package]
name = "r0-metal-doctor"
version = "0.1.0"
edition = "2021"
description = "Diagnose whether RISC Zero proving on Apple Silicon actually uses Metal — device caps, toolchain state, and observed prover lane. Reports, never assumes."
license = "MIT"
repository = "https://github.com/AnubisQuantumCipher/r0-metal-doctor"
keywords = ["risc0", "metal", "apple-silicon", "zk", "diagnostics"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.32"
