[workspace]

[package]
name = "r0-metal-doctor"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
description = "Diagnose whether RISC Zero proving on Apple Silicon actually uses Metal — device caps, toolchain state, and observed prover lane. Reports, never assumes."
license = "MIT"
repository = "https://github.com/AnubisQuantumCipher/r0-metal-doctor"
readme = "README.md"
keywords = ["risc0", "metal", "apple-silicon", "zk", "diagnostics"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
wait-timeout = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
